# VC-RDAgent

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
data/: HMS.json  HMS.jsonl  LIRICAL.json  LIRICAL.jsonl  PUMCH-ADM.json  PUMCH-ADM.jsonl  mygene2.json  mygene2.jsonl
disease_phenotype_kg/: disease_to_publicDisease_edges.csv  gene_to_disease_edges.csv
general_cases/: phenotype_disease_case_library_with_high_freq.jsonl
hpo_embedding/: ic_dict_recomputed.json
hpo_embedding/poincare_model/: extract_phenotype_embeddings.py  trainpoincare.py
mondo_annotations/: mondo_parsed_statistics.json  parse_mondo_obo.py
orphanet_annotations/: categorization_of_orphanet_diseases.csv  extract_disease_type_mapping.py  xml_to_json_converter_product1.py  xml_to_json_converter_product4.py
pho2disease/: LR.py  config_utils.py  ensemble_disease_ranking.py  generate_prompts_bysteps.py  inference_config.json  phenotype_to_disease_prediction_bysteps.py  prompt_config.json
rare-disease-chat/: .dockerignore  Dockerfile  README.md  README_DOCKER.md  auto_run_docker.sh  auto_start.sh  docker-compose.yml  docker_start.sh  set_config.sh
rare-disease-chat/chat-system/: .dockerignore  Dockerfile  README.md  WEB_UI_README.md  docker-compose.yml  example.txt  inference_config.json  main.py  phenotype_to_disease_controller_langchain_stream_api.py  pyproject.toml  rdagent_dashboard_api.py  start_dashboard.sh  start_web_ui.sh  web_ui_api.py  web_ui_api_en.py
rare-disease-chat/chat-system/rdagent/: index.html  index_en.html  rdagent_dashboard.html
(+27 files in other folders)
