[project]
name = "chat-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.3",
    "langchain-core>=1.2.7",
    "requests>=2.32.5",
    "transformers>=4.57.3",
    "langchain-openai>=1.1.7",
    "xxhash>=3.6.0",
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.30.0",
    "httpx[socks]>=0.27.0",
]
[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true 
